--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -2,13 +2,30 @@ body{
     text-align: center;
     padding: 10px;
     margin: 10px;
+    background-image: url(../images/bg.jpg);
+    background-size: cover;
+    font-size: 16px;
+    font-family: Arial, Helvetica, sans-serif;
 }
 
 button {
-    font-size: 16px;
+    font-size: 24px;
     font-family: 'Times New Roman', Times, serif;
 }
 
 img{
     height: 300px;
 }
+
+.answerchoice {
+    border: solid 1px aquamarine;
+    border-radius: 10px;
+    background-color: skyblue;
+    width: 10%;
+    display: inline-block;
+    text-align: center;
+    align-items: center;
+    padding: 10px;
+    margin: 10px;
+}
+
